--- a/i18n/en.json
+++ b/i18n/en.json
@@ -3,5 +3,5 @@
 		"authors": ["Simon Stier"]
 	},
 	"wellplate-editor-desc": "Wellplate Editor for sciLIMS",
-	"wellplate-editor-name": "LabWiki"
+	"wellplate-editor-name": "WellplateEditor"
 }
